--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  height: 100vh;
 }
 
 body * {
@@ -155,4 +156,15 @@ ul li a:hover {
 #social-links a:hover {
   background: var(--highlight-color);
   padding: 16px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-ligth.jpg);
+  }
 }
